	- a fetch on any column that had a type that did not have an entry
	  in the type_info array would segfault DBD::Pg.  [reported by: TODO]
	- Duplicate rows bug with column_info() REMARKS has been fixed. However,
	  support for Postgres 7.1.x which worked briefly for 1.31 has now been
	  dropped for this feature. (Mark Stosberg)
    - Bumped required Perl version to 5.6.1 in Makefile.PL. We were already
      already requiring for Pg.pm since 1.31.

1.31 Mon Nov 17 21:21:21 UTC 2003
	- $dbh->{TYPE} now returns SQL_TYPE_TIMESTAMP instead of 1114 for 
	  timestamp columns.  (In 1.31_x {x| x<8} $sth->{TYPE} returned 0
	  but reported by ["Hirche, Joachim" <Joachim.Hirche@cimconcepts.com>]).
	- Raised required versions to Perl 5.6.1 and DBI 1.35
	- Fix syntax error related to pg_server_version (CPAN bugs #2492 and #2755)
	- Cache multiple calls to pg_server_version.
	- Notice messages generated by the database now use the perl 
		warning mechanism instead of going to stderr.
		[Dominic Mitchell <dom@semantico.com>]
	- $dbh->prepare() rewrites the SQL statement into an internal form,
		striping out comments and whitespace, and if PostgreSQL > 7.3 takes the 
		stripped statement and passes that to Postgres' PREPARE statement, 
		then rewrites the statement as 'EXECUTE "DBD::PG::cached_query n"
		($1, $2, ... $n, $n+1)' for DBD::Pg's execute.
		-- Currently disabled until PREPARE works a little better
	- Allows the use of :n and :foo bind params. So: 
		(SELECT * FROM foo WHERE 1 = :this and 2 = :that) will now work.
	- Complains on execute when unbound bind params are submitted
		(instead of defaulting to NULL)
	- Switched over to use driver.xst.
	- pg_error() removes \n's rather than truncating the message on the first \n.
	- Fixed statement scan problem where the preparse of
		"SELECT foo[3:33] from bar" was scanning :33 as a placeholder
	- Moved the quoting of bind values out of execute() and into
		bind -- as there is no need to requote the value every time execute 